Check to see if the option being added has the "selected" property, if it does then the list needs to be reinitialized. r=dcone, bug #17519